feat(docs): add config for dryccfile